# SHARKtools_pre_system_Svea

./: .gitignore  README.md  SHARKtools_pre_system_Svea_class_diagram.plantuml  __init__.py  app.py  defaults.yaml  events.py  install_pre_system_svea_utv.bat  lists.py  options.yaml  pyproject.toml  requirements.txt  saves.json  saves.py  test_scrollbar.py
defaults/: slua.yaml  smhi-fiske.yaml  smhi.yaml
docs/: ctd_processing_sequence.plantuml  ctd_qc_sequence.plantuml  försystem_SBE19.wsd  försystem_class.plantuml  försystem_sequence.plantuml
gui/: components.py  frames.py  page_start.py  translator.py
src/sharktools_ctd_pre_system/: __init__.py  app.py  events.py  plugins.py  saves.py
src/sharktools_ctd_pre_system/defaults/: default.yaml  slua.yaml
src/sharktools_ctd_pre_system/gui/: __init__.py  auto_fire.py  components.py  frames.py  page_start.py
