[project]
name = "sharktools_ctd_pre_system"
version = "1.0.0"
description = "SHARKtools plugin to add metadata before running seabird"
authors = [
    {name = "Magnus Wenzer", email = "nodc@smhi.se"},
]
dependencies = [
    "psutil>=5.9.8",
    "pyyaml>=6.0.1",
    "ctd-pre-system @ git+https://github.com/sharksmhi/pre_system_svea.git",
    "shark-tkinter-lib @ git+https://github.com/sharksmhi/shark_tkinter_lib.git",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project.entry-points.'sharktools.plugins']
ctd_pre_system = 'sharktools_ctd_pre_system'

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mypkg = ["."]

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
]
